--- a/Proyecto/assets/css/style.css
+++ b/Proyecto/assets/css/style.css
@@ -1102,23 +1102,6 @@ footer span {
     }
 
 /*Notificaciones*/
-/*----------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
-
-    #notificationsDropdown {
-        position: absolute;
-        background-color: var(--color-principal);
-        color: var(--color-letra);
-        min-width: 300px;
-        max-height: 400px;
-        overflow-y: auto;
-        box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-        z-index: 1;
-        right: 0;
-        top: 100%;
-        border-radius: 10px;
-    }
-/*Notificaciones*/
-/*----------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
 #notificationsDropdown {
     position: absolute;
     background-color: var(--color-principal);
@@ -1686,7 +1669,45 @@ footer span {
         box-shadow: var(--shadow-sm);
     }
 
-    @media (max-width: 991px) {
+/*panel*/
+
+.swal-custom-popup {
+    max-width: 500px; /* Cambia el tamaño a tu preferencia */
+    width: 80%; /* Esto hace que el ancho sea un porcentaje del contenedor */
+}
+
+
+.swal-custom-popup .containerPreRemove {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    min-height: 80vh;
+    /*padding: 10px;*/
+}
+
+.swal-custom-popup .contenedorPreguntaRemove {
+    background-color: var(--color-principal);
+    border-radius: 8px;
+    padding: 20px;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+    width: 100%;
+    max-width: 600px;
+    height: auto;
+}
+
+.swal-custom-popup .fotoUsuarioPreguntaRemove img {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    object-fit: cover;
+    margin-right: 15px;
+}
+
+
+
+
+@media (max-width: 991px) {
         .containerTema {
             flex-direction: column;
         }
@@ -2034,43 +2055,18 @@ footer span {
             object-fit: cover;
             margin-right: 15px;
         }
+
+    .dropdown-content {
+        width: 300px;
+    }
+
+    #notificationsDropdown .notificacion-item {
+        font-size: 30px;
     }
 
 
-/*CSS del panel*/
-/* swal-custom-popup estilos personalizados */
-.swal-custom-popup {
-    max-width: 500px; /* Cambia el tamaño a tu preferencia */
-    width: 80%; /* Esto hace que el ancho sea un porcentaje del contenedor */
-}
 
-
-.swal-custom-popup .containerPreRemove {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    min-height: 80vh;
-    /*padding: 10px;*/
-}
-
-.swal-custom-popup .contenedorPreguntaRemove {
-    background-color: var(--color-principal);
-    border-radius: 8px;
-    padding: 20px;
-    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-    width: 100%;
-    max-width: 600px;
-    height: auto;
-}
-
-.swal-custom-popup .fotoUsuarioPreguntaRemove img {
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    object-fit: cover;
-    margin-right: 15px;
-}
+    }
 
 
 
