--- a/Proyecto/assets/css/style.css
+++ b/Proyecto/assets/css/style.css
@@ -2073,4 +2073,19 @@ footer span {
 }
 
 
+.href
+{
+    color: var(--color-letra);
+    text-decoration: none;
+}
 
+.href:hover
+{
+    color: var(--color-secundario);
+    text-decoration: none;
+}
+
+iframe ~ .toolbarHorizontalGroup
+{
+    background-color: white;
+}
