--- a/Proyecto/assets/css/style.css
+++ b/Proyecto/assets/css/style.css
@@ -128,7 +128,7 @@ strong {
     width: 100%;
     padding: 0.5em 2em;
     border: 1px solid var(--color-principal);
-    border-radius: 5px;
+    border-radius: 30px;
     background-color: var(--color-fondo);
     color: var(--color-letra);
 }
@@ -454,6 +454,9 @@ footer span {
     height: 73vh;
     max-height: calc(100vh - 100px);
     overflow: hidden;
+}
+.enviarMensajeBarra{
+    background-color: var(--color-principal);
 }
 
 .users-sidebar {
