--- a/Proyecto/assets/css/style.css
+++ b/Proyecto/assets/css/style.css
@@ -1183,7 +1183,14 @@ footer span {
         background-color: var(--color-secundario);
     }
 
+    .container-titulo-tema {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
     .temas-titulo {
+        flex: 1;
         font-size: 2.5rem;
         font-weight: 600;
         color: var(--color-letra);
@@ -1345,6 +1352,7 @@ footer span {
         background-color: var(--color-secundario);
         cursor: pointer;
         margin-bottom: 10px;
+        margin-left: auto;
     }
 
     .btnCrear:hover {
